--- a/styles.css
+++ b/styles.css
@@ -130,8 +130,8 @@ footer {
 
   th, td {
     padding: 0.75rem;
-    text-align: right;
     position: relative;
+    text-align: center;
   }
 
   th::before, td::before {
